--- a/guapaiqu/css/mainbody.css
+++ b/guapaiqu/css/mainbody.css
@@ -1,14 +1,19 @@
-
+body {
+   background-image: url(../img/taohua.jpg);
+}
 
 #container {
-    top: 30px;
+    margin-top: 50px;
+    margin-bottom: 60px;
     height: auto !important;
     min-height: 100%;
     height: 100%;
 	overflow: auto;
     position: relative; /* Required to absolutely position the footer */
 }
-
+#albumdiv {
+    
+}
 #left {
 	float: left;
 	width: 20%;
@@ -36,6 +41,7 @@
 }
 
 #footer {
+        z-index: 999999;
 	background-image: url(../img/footer_bgn.jpg);
 	background-repeat: repeat-x;
 	height: 38px;
