set header footer min width

--- a/guapaiqu/css/header.css
+++ b/guapaiqu/css/header.css
@@ -5,6 +5,7 @@ ul.topnav {
 	margin: 0;
 	float: left;
 	width: 100%;
+        min-width: 700px;
 	height: 35px;
 	background: #FF00FF;
 	background-image: url(../img/footer_bgnb.jpg);
