--- a/guapaiqu/css/mainbody.css
+++ b/guapaiqu/css/mainbody.css
@@ -12,15 +12,27 @@ body {
     position: relative; /* Required to absolutely position the footer */
 }
 #albumdiv {
-    
+	margin-right:0;
+	margin-left: 15%;
+    padding-left:1cm;
+	padding-right:1cm;
+	border-left: 1px solid #CC99FF;
 }
 #left {
 	float: left;
 	width: 20%;
 	height:auto;
-	min-height:1000px;
+	min-height:700px;
     padding-top:20px;
 	border-right: 1px solid #CC99FF;
+}
+#albumcontrolpan {
+        float: left;
+        width: 15%;
+        height:auto;
+        min-height:700px;
+        padding-top:20px;
+        border-right: 1px solid #CC99FF;
 }
 
 #right {
@@ -28,7 +40,7 @@ body {
 	width: 15%;
 	padding-top: 20px;
 	border-left: 1px solid #CC99FF;
-    min-height: 1000px;
+    min-height: 700px;
 }
 
 #content {
